[Glitch] Fix report dialog being illegible using mastodon-light theme
Port 29ee3c61a3d3ec98335052b579d956a518d1ac94 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/mastodon-light/diff.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon-light/diff.scss
@@ -229,13 +229,19 @@
 .mute-modal,
 .block-modal,
 .report-modal,
+.report-dialog-modal,
 .embed-modal,
 .error-modal,
 .onboarding-modal,
 .report-modal__comment .setting-text__wrapper,
-.report-modal__comment .setting-text {
+.report-modal__comment .setting-text,
+.report-dialog-modal__textarea {
   background: $white;
   border: 1px solid lighten($ui-base-color, 8%);
+}
+
+.report-dialog-modal .dialog-option .poll__input {
+  color: $white;
 }
 
 .report-modal__comment {
